NitroSwan revision history
-=-=-=-=-=-=-=-=-=-=-=-=-=-

V0.6.1 - 2023-08-19 (FluBBa)
	Added power on/off ability.
	Fixed sound mixing.
	Optimized mapper writing.

V0.6.0 - 2023-08-05 (FluBBa)
	Added per line emulation of Display Control register.
	Added per line emulation of FG Window register.
	Added per line emulation of Map Address register.
	Added differences for the 2 cart mappers.
	Optimized tile map rendering.
	Optimized cpu core.

V0.5.2 - 2023-04-21 (FluBBa)
	Fixed controls for PCV2.
	Fixed WS sound levels.
	Fixed WS sound icon.
	Fixed save state.
	Added more BnW palettes.

V0.5.1 - 2023-03-09 (FluBBa)
	Fixed noise calculation.
	Fixed BnW palettes.
	Added setting for border.

V0.5.0 - 2023-03-01 (FluBBa)
	Fixed reset of mapper registers.
	Fixed loading of roms that are not power of 2.
	Fixed timing of several opcodes.
	Fixed timing of interrupts.
	Fixed timing of address calculations.
	Fixed some cpu opcodes.
	Fixed interrupt handling.
	Fixed timers.
	Fixed sweep on sound channel 3.
	Fixed noise feedback selection.
	Fixed sound sample playback.
	Optimized cpu core a bit.
	Added support for serial port interrupts.
	Added support for battery low.
	Added new debug menu.
	Linked NDS battery to WS battery.
	Better menu traversing.

V0.4.1 - 2022-08-15 (FluBBa)
	Added border for PCV2 mode.
	WS refresh rate can control NDS refresh rate.

V0.4.0 - 2022-08-11 (FluBBa)
	Fixed flag calculation for most opcodes.
	Fixed emulation of undefined opcodes.
	Fixed settings to disable Bg,Fg & Spr.
	Fixed default sound volume on WSC/SC.
	Optimized the cpu core.
	Tweaked behaviour of timers.
	Mute Ch2 when playing samples.

V0.3.6 - 2022-04-20 (FluBBa)
	Fixed sound DMA a bit.
	Added savestates.
	Added sound button (Select).

V0.3.5 - 2022-03-09 (FluBBa)
	Added RTC emulation.
	Added a border to emu screen.
	Better mapping of input.
	Optimized graphic redraw.
	Optimized PC/IP handling in cpu core.

V0.3.0 - 2022-02-09 (FluBBa)
	Added banked SRAM emulation.