@@ -2,6 +2,7 @@ NitroSwan revision history
 -=-=-=-=-=-=-=-=-=-=-=-=-=-
 
 V0.6.1 - 2023-08-19 (FluBBa)
+	Added IPS patch functionality.
 	Added power on/off ability.
 	Fixed sound mixing.
 	Optimized mapper writing.
